2011-01-13  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Just small fix for problem with check-webkit-style.
        It just didn't work for this patch.
        Old code can't concatenate a list of strings with None.

        * Scripts/webkitpy/common/checkout/scm.py:

2011-01-13  David Levin  <levin@chromium.org>

        Reviewed by Shinichiro Hamaji.

        check-webkit-style: _FunctionState should use Position to know where items are.
        https://bugs.webkit.org/show_bug.cgi?id=52424

        * Scripts/webkitpy/style/checkers/cpp.py:
        (_FunctionState.*): Changed _FunctionState to use Position instead of line numbers.
        (detect_functions): Changed to pass Position's to _FunctionState.begin and
        did some minor clean-up.
        (*): Other changes are simply about converting to use the Position's in_FunctionState
        instead of line numbers.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Changed the test code
        to verify the positions stored in _FunctionState.

2011-01-13  Eric Seidel  <eric@webkit.org>

        Reviewed by David Levin.

        webkit-patch suggest-reviewers dies when ChangeLogs are missing
        https://bugs.webkit.org/show_bug.cgi?id=49158

        This is not the most elegant, but it is a very safe fix to this bug.
        One advantage of catching ScriptError like this instead of adding a
        new added_or_modified_files or fixing all changed_files callers
        to use a more specific change_files variant, is that we catch
        all kinds of ScriptErrors which might cause our (non-essential)
        suggest-reviewers code to fail out.  This should make passing
        --suggest-reviewers to webkit-patch upload much more robust
        and may even make it possible for us to make it default.

        The root of the problem here is that SCM.changed_files includes
        deleted ChangeLog paths (from moves, etc) which then when we ask